# cppbar

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .prettierrc  CMakeLists.txt  LICENSE  README.md  amalgamate.py  cppbar.hpp  cppbar.json  modules.json
.github/workflows/: ci.yml  release.yml
cmake/hub/: loader.cmake
examples/: CMakeLists.txt  example_basic.cpp
include/: cppbar.hpp
include/cppbar/: multi_progress.hpp  progress_bar.hpp  spinner.hpp
include/cppbar/animation/: animation.hpp  animation_impl.hpp
include/cppbar/color/: color.hpp  color_impl.hpp
include/cppbar/style/: style.hpp  style_impl.hpp
include/cppbar/terminal/: terminal.hpp  terminal_impl.hpp  terminal_unix.hpp  terminal_unix_impl.hpp  terminal_win.hpp  terminal_win_impl.hpp
include/cppbar/utils/: clock.hpp  format.hpp  math.hpp
src/: main.cpp  terminal_unix.cpp  terminal_win.cpp
tests/: CMakeLists.txt  test_progress.cpp
